# Fleet_logistic_tracker

./: CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a4dcfad8af88_initial_schema.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: auth.py  cargo.py  dashboard.py  drivers.py  operations.py  vehicles.py
backend/app/core/: config.py  database.py  exceptions.py  security.py
backend/app/models/: __init__.py  cargo.py  driver.py  location.py  operation.py  user.py  vehicle.py
backend/app/schemas/: cargo.py  driver.py  location.py  operation.py  user.py  vehicle.py
backend/app/services/: auth_service.py  cargo_service.py  dashboard_service.py  driver_service.py  location_service.py  operation_service.py  vehicle_service.py
backend/data/: fleet.db
backend/tests/: conftest.py  test_health.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useCargo.ts  useDashboard.ts  useDrivers.ts  useOperations.ts  useVehicles.ts
frontend/src/pages/: CargoDetailPage.tsx  CargoPage.tsx  DashboardPage.tsx  DriversPage.tsx  LoginPage.tsx  OperationsPage.tsx  VehicleDetailPage.tsx  VehiclesPage.tsx
frontend/src/services/: api.ts  authService.ts  cargoService.ts  dashboardService.ts  driverService.ts  operationService.ts  (+1 more)
(+12 files in other folders)
