[project]
name = "fleet-logistics-tracker-backend"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
# Keep generated migration scripts out of linting noise
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (common bugs)
    "UP",  # pyupgrade (modern syntax)
    "SIM", # flake8-simplify
    "C4",  # comprehensions
]
ignore = [
    "B008",  # function calls in argument defaults — required by FastAPI's Depends()
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports are intentional
# SQLAlchemy relationships use string forward-references (Mapped["Vehicle"]);
# ruff's pyflakes can't resolve them but they are valid at runtime.
"app/models/*.py" = ["F821"]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "alembic/versions"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
